--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ https://github.com/ardacarofficial/links-website is open source project.
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Description - Your Title</title>
-    <meta name="description" content="Your Description">
+    <meta name="description" content="Welcome to Master BT">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400&amp;display=swap">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -24,8 +24,8 @@ https://github.com/ardacarofficial/links-website is open source project.
         <img src="img/logo.png" alt="Logo" />
       </div>
       <div class="header_text flex_column_center">
-        <h1 class="header_h_item">Your Title</h1>
-        <h2 class="header_h_item">Your Description</h2>
+        <h1 class="header_h_item">Master BT</h1>
+        <h2 class="header_h_item">Welcome to Come Master BT</h2>
       </div>
     <!-- Logo, Title and Description Codes End -->  
 
@@ -73,9 +73,9 @@ https://github.com/ardacarofficial/links-website is open source project.
     <!-- Menu Codes Start -->
       <nav>
         <ul class="header_nav_menu_list flex_no_wrap_row_center">
-          <li data-target="#main_section_container_1" id="header_nav_menu_item_1" class="header_nav_menu_item" href="">Menu 1</li>
-          <li data-target="#main_section_container_2" id="header_nav_menu_item_2" class="header_nav_menu_item" href="">Menu 2</li>
-          <li data-target="#main_section_container_3" id="header_nav_menu_item_3" class="header_nav_menu_item" href="">Menu 3</li>
+          <li data-target="#main_section_container_1" id="header_nav_menu_item_1" class="header_nav_menu_item" href="">Free Tool </li>
+          <li data-target="#main_section_container_2" id="header_nav_menu_item_2" class="header_nav_menu_item" href="">Sell Tool </li>
+          <li data-target="#main_section_container_3" id="header_nav_menu_item_3" class="header_nav_menu_item" href="">Buff Tool</li>
         </ul>
       </nav>
     <!-- Menu Codes End -->
@@ -86,33 +86,33 @@ https://github.com/ardacarofficial/links-website is open source project.
       <section id="main_section_container_1" class="flex_column_center">
         <!-- Menu Text Item -->
         <div class="main_text_item">
-          <p>The project, where you can easily change texts, icons, colours, boxes and images, is live! Download and try it on Github now.</p>
+          <p>Welcome to Master BT | Free Tool All</p>
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="https://github.com/ardacarofficial/links-website/wiki/Component-Settings" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Component Settings</button>
+          <a class="main_small_a_item" href="https://t.me/TERMUXMASTERTG" target="_blank" rel="nofollow">
+            <button class="main_small_button_item">Facebook Tool</button>
           </a>
-          <a class="main_small_a_item" href="https://github.com/ardacarofficial/links-website/wiki/Design-Settings" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Design Settings</button>
+          <a class="main_small_a_item" href="https://t.me/TERMUXMASTERTG" target="_blank" rel="nofollow">
+            <button class="main_small_button_item">Intrgram Tool</button>
           </a>
         </div>
         <!-- Menu Small Item -->
         <div class="main_small_button_list">
-          <a class="main_small_a_item" href="https://github.com/ardacarofficial/links-website/discussions" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Report a Bug or Suggestion</button>
+          <a class="main_small_a_item" href="https://t.me/TERMUXMASTERTG" target="_blank" rel="nofollow">
+            <button class="main_small_button_item">YouTube Tool</button>
           </a>
-          <a class="main_small_a_item" href="https://github.com/ardacarofficial/links-website/pulls" target="_blank" rel="nofollow">
-            <button class="main_small_button_item">Support the Project</button>
+          <a class="main_small_a_item" href="https://t.me/Master_TG_K" target="_blank" rel="nofollow">
+            <button class="main_small_button_item">Support Me</button>
           </a>
         </div>
         <!-- Menu Item -->
-        <a class="main_a_item" href="https://github.com/ardacarofficial/links-website" target="_blank" rel="nofollow">
-          <button class="main_button_item">Github Open Source Files</button>
+        <a class="main_a_item" href="https://t.me/TERMUXMASTERTG/49" target="_blank" rel="nofollow">
+          <button class="main_button_item">Tool All</button>
         </a>
         <!-- Menu Item -->
-        <a class="main_a_item" href="https://github.com/ardacarofficial" target="_blank" rel="nofollow">
-          <button class="main_button_item">Project Creator</button>
+        <a class="main_a_item" href="https://www.facebook.com/profile.php?id=61554845068365&mibextid=kFxxJD" target="_blank" rel="nofollow">
+          <button class="main_button_item">Facebook Page</button>
         </a>
       </section>
       <!-- Menu Container 1 Codes End -->
@@ -190,7 +190,7 @@ https://github.com/ardacarofficial/links-website is open source project.
     <footer>
       <!-- Footer Codes Start -->
       <div class="footer_div_item flex_row_center">
-        <a class="footer_a_item" href="#link">Your Name</a>&nbsp;| Copyright Text
+        <a class="footer_a_item" href="#link">Master BT</a>&nbsp;| Copyright 2024
       </div>
     </footer>
       <!-- Footer Codes End -->
